--- a/AppsAndShortcuts/DeviceAppPages/FindAPrinter.xaml
+++ b/AppsAndShortcuts/DeviceAppPages/FindAPrinter.xaml
@@ -1,14 +1,14 @@
-﻿<Page x:Class="AppsAndShortcuts.DeviceApps.SkypeForBusiness"
+﻿<Page x:Class="AppsAndShortcuts.DeviceAppPages.FindAPrinter"
       xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
       xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
       xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006" 
       xmlns:d="http://schemas.microsoft.com/expression/blend/2008" 
-      xmlns:local="clr-namespace:AppsAndShortcuts.DeviceApps"
+      xmlns:local="clr-namespace:AppsAndShortcuts.DeviceAppPages"
       mc:Ignorable="d" 
       d:DesignHeight="450" d:DesignWidth="800"
-      Title="SkypeForBusiness">
+      Title="FindAPrinter">
 
     <Grid>
-        
+        <Label Content="Find a printer by a given serial number." />
     </Grid>
 </Page>
