--- a/AppsAndShortcuts/OtherAppPages/ProblemTickets.xaml
+++ b/AppsAndShortcuts/OtherAppPages/ProblemTickets.xaml
@@ -1,14 +1,14 @@
-﻿<Page x:Class="AppsAndShortcuts.DeviceApps.DeviceProperties"
+﻿<Page x:Class="AppsAndShortcuts.OtherAppPages.ProblemTickets"
       xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
       xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
       xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006" 
       xmlns:d="http://schemas.microsoft.com/expression/blend/2008" 
-      xmlns:local="clr-namespace:AppsAndShortcuts.DeviceApps"
+      xmlns:local="clr-namespace:AppsAndShortcuts.OtherAppPages"
       mc:Ignorable="d" 
       d:DesignHeight="450" d:DesignWidth="800"
-      Title="DeviceProperties">
+      Title="ProblemTickets">
 
     <Grid>
-        
+        <Label Content="List the current open Problem Tickets."/>
     </Grid>
 </Page>
