--- a/AppsAndShortcuts/UserAppPages/FindCryptPassword.xaml
+++ b/AppsAndShortcuts/UserAppPages/FindCryptPassword.xaml
@@ -1,14 +1,14 @@
-﻿<Page x:Class="AppsAndShortcuts.DeviceApps.CredentialManager"
+﻿<Page x:Class="AppsAndShortcuts.UserAppPages.FindCryptPassword"
       xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
       xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
       xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006" 
       xmlns:d="http://schemas.microsoft.com/expression/blend/2008" 
-      xmlns:local="clr-namespace:AppsAndShortcuts.DeviceApps"
+      xmlns:local="clr-namespace:AppsAndShortcuts.UserAppPages"
       mc:Ignorable="d" 
       d:DesignHeight="450" d:DesignWidth="800"
-      Title="CredentialManager">
+      Title="FindCryptPassword">
 
     <Grid>
-        
+        <Label Content="Open the RHICrypt website for a given user. "/>
     </Grid>
 </Page>
