--- a/AppsAndShortcuts/App.xaml
+++ b/AppsAndShortcuts/App.xaml
@@ -4,6 +4,7 @@
              xmlns:local="clr-namespace:AppsAndShortcuts"
              StartupUri="MainWindow.xaml">
     <Application.Resources>
+ 
         <Style TargetType="Button">
             <Setter Property="Foreground" Value="White"/>
             <Setter Property="Background" Value="DarkCyan"/>
@@ -13,11 +14,34 @@
         <Style TargetType="Button" x:Key="TopLevelMenuButtons">
             <Setter Property="Background" Value="Transparent"/>
             <Setter Property="BorderThickness" Value="0"/>
-            <Setter Property="FontSize" Value="20"/>
+            <Setter Property="FontSize" Value="25"/>
+            <Setter Property="Margin" Value="3,5,3,5"/>
+        </Style>
+
+        <Style TargetType="StackPanel" x:Key="AppButtonBackgroundPanel">
+            <Setter Property="Background" Value="DarkGray"/>
+        </Style>
+
+        <Style TargetType="Button" x:Key="AppButtons">
+            <Setter Property="Background" Value="Transparent"/>
+            <Setter Property="BorderThickness" Value="0"/>
+            <Setter Property="HorizontalContentAlignment" Value="Left"/>
+            <Setter Property="Padding" Value="10,0,0,0"/>
+            <Setter Property="MaxWidth" Value="165"/>
         </Style>
 
         <Style TargetType="StackPanel" x:Key="TopLevelMenu">
+            <Setter Property="Background" Value="Gray"/>
+        </Style>
+        <Style TargetType="StackPanel" x:Key="SubLevelMenu">
             <Setter Property="Background" Value="LightGray"/>
         </Style>
+
+        <Style TargetType="Page" x:Key="CategoryPages">
+            <Setter Property="MinHeight" Value="600"/>
+            <Setter Property="MinWidth" Value="800"/>
+        </Style>
+        
+        
     </Application.Resources>
 </Application>
