--- a/AppsAndShortcuts/Categories/OtherApps.xaml
+++ b/AppsAndShortcuts/Categories/OtherApps.xaml
@@ -5,12 +5,12 @@
       xmlns:d="http://schemas.microsoft.com/expression/blend/2008" 
       xmlns:local="clr-namespace:AppsAndShortcuts.Categories"
       mc:Ignorable="d" 
-      d:DesignHeight="450" d:DesignWidth="800"
-      Title="OtherApps">
+      Title="OtherApps"
+      Style="{StaticResource CategoryPages}">
 
     <Grid>
         <Grid.ColumnDefinitions>
-            <ColumnDefinition Width=".25*"/>
+            <ColumnDefinition Width="165"/>
             <ColumnDefinition Width="*"/>
             <ColumnDefinition Width=".3*"/>
         </Grid.ColumnDefinitions>
@@ -24,24 +24,36 @@
             <RowDefinition Height="*"/>
             <RowDefinition Height="*"/>
             <RowDefinition Height="*"/>
+            <RowDefinition Height="*"/>
+            <RowDefinition Height="*"/>
+            <RowDefinition Height="*"/>
+            <RowDefinition Height="*"/>
+            <RowDefinition Height="*"/>
+            <RowDefinition Height="*"/>
+            <RowDefinition Height="*"/>
+            <RowDefinition Height="*"/>
         </Grid.RowDefinitions>
 
-        <Button Content="Problem Tickets" 
+        <Button Content="Problem Tickets"  
+                Style="{StaticResource AppButtons}"
                 Grid.Column="0"
                 Grid.Row="0" 
                 Click="Problem_Tickets_Button_Click"/>
 
-        <Button Content="Change Tickets"
+        <Button Content="Change Tickets" 
+                Style="{StaticResource AppButtons}"
                 Grid.Column="0"
                 Grid.Row="1"  
                 Click="Change_Tickets_Button_Click"/>
 
-        <Button Content="Search AD Group"
+        <Button Content="Search AD Group" 
+                Style="{StaticResource AppButtons}"
                 Grid.Column="0"
                 Grid.Row="2"
                 Click="Search_AD_Group_Button_Click"/>
 
-        <Button Content="Find Group Members"
+        <Button Content="Find Group Members" 
+                Style="{StaticResource AppButtons}"
                 Grid.Column="0"
                 Grid.Row="3"
                 Click="Find_Group_Members_Button_Click"/>
