--- a/AppsAndShortcuts/AppsAndShortcuts.xaml
+++ b/AppsAndShortcuts/AppsAndShortcuts.xaml
@@ -1,4 +1,4 @@
-﻿<Window x:Class="AppsAndShortcuts.MainWindow"
+﻿<Window x:Class="AppsAndShortcuts.AppsAndShortcuts"
         xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
         xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
         xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
@@ -8,6 +8,7 @@
         mc:Ignorable="d"
         
         HorizontalContentAlignment="Stretch"
+        
         MinHeight="600" MinWidth="850" WindowStyle="None" MouseDown="Window_MouseDown"  
         
         VerticalContentAlignment="Stretch" 
